<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">



    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:layout_marginTop="-130dp"
        android:layout_marginEnd="-130dp"
        android:layout_marginStart="-130dp"
        android:background="@drawable/rounded_back">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_spa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            ></ImageView>

        <TextView
            android:layout_below="@+id/pic"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22dp"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"></TextView>


    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl1">
        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rl11"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="180dp"
                        app:cardElevation="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="25dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/ic_make_enquiry">

                        </ImageView>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_below="@+id/c1"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/make_enquiry"></TextView>
                </RelativeLayout>





                <RelativeLayout
                    android:layout_toRightOf="@+id/rl11"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="180dp"
                        app:cardElevation="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/ic_view_manager">

                        </ImageView>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_below="@+id/c2"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_enquiry"></TextView>
                </RelativeLayout>
            </RelativeLayout>































            <RelativeLayout
                android:id="@+id/rl5"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/rl2"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rl16"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c6"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="180dp"
                        app:cardElevation="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="25dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/ic_make_appointment">

                        </ImageView>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_below="@+id/c6"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appointment"></TextView>
                </RelativeLayout>





                <RelativeLayout
                    android:layout_toRightOf="@+id/rl16"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c7"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="180dp"
                        app:cardElevation="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/ic_assignment_turned_in_black_24dp">

                        </ImageView>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_below="@+id/c7"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appointments"></TextView>
                </RelativeLayout>
            </RelativeLayout>















            <RelativeLayout
                android:layout_below="@id/rl5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:id="@+id/rl3"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="180dp"
                        app:cardElevation="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/ic_pay_up24dp">

                        </ImageView>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_below="@+id/c3"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/make_payment"></TextView>
                </RelativeLayout>





                <RelativeLayout
                    android:layout_toRightOf="@+id/rl3"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="180dp"
                        app:cardElevation="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/ic_money">

                        </ImageView>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_below="@+id/c4"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_payments"></TextView>
                </RelativeLayout>
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>